# omnilimb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
omnilimb/: __init__.py  _cache.py  _errors.py  _retry.py  _scoring.py  config.py  plugin.yaml  registries.py  schemas.py  tools.py
omnilimb/backends/: __init__.py  base.py  cli_backend.py  native_backend.py
omnilimb/dashboard/: __init__.py  manifest.json  plugin_api.py
omnilimb/skills/omnilimb/: SKILL.md
scripts/: demo.py  deploy_site.py
tests/: conftest.py  test_omnilimb.py
website/: index.html
